// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 gDXYgb"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a danger color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 jOMa-dz"
    color="danger"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a hint color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 hneblP"
    color="hint"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a info color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 bCIuZz"
    color="info"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a success color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 gDXYgb"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a warning color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 QLhET"
    color="warning"
    type="checkbox"
  />
</div>
`;
